--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url("backgroundimage.png");
+    background-color: #007bff;
     color: #333;
     display: flex;
     align-items: center;
